style: eliminar argumento jvmArgs innecesario en la tarea ktlintFormat